# IneqPy

./: Makefile  TODO.md  pyproject.toml
.github/workflows/: cicd.yml  docs.yml  pypi.yml  python-package.yml  release.yml  test.yml
src/ineqpy/: __init__.py  _statistics.py  api.py  inequality.py  statistics.py  utils.py
src/ineqpy/grouped/: __init__.py  inequality.py  stats.py
tests/: test_api.py  test_inequality.py  test_moments.ipynb  test_statistics.py
