[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "IneqPy"
dynamic = ["version"]
description = "A Python Package To Quantitative Analysis Of Inequality"
readme = "README.md"
authors = [
    {name = "Max", email = "ineqpy@mxm.mozmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "pandas",
    "numba",
    "scipy>=1.14.1",
]

[project.urls]
Homepage = "https://github.com/asdf8601/IneqPy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "deps",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
stubPath = "src/stubs"
# venv = "env367"
reportMissingImports = true
reportMissingTypeStubs = false
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

[tool.ruff]
line-length = 80
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["ineqpy"]
combine-as-imports = true

[tool.uv]
dev-dependencies = [
    "myst-parser>=4.0.0",
    "numpydoc>=1.8.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "sphinx-autoapi>=3.3.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
